added login func
